# raglish-cli

./: .env.example  .gitignore  DEPLOYMENT.md  EXAMPLES.md  GEMINI.md  INSTALL.md  LICENSE.md  Makefile  README.md  USER_GUIDE.md  config.yaml  pyproject.toml  requirements.txt
.kiro/specs/document-rag-english-study/: design.md  requirements.md  tasks.md
.kiro/steering/: project-rules.md
config/: default.yaml
dev_log/: 01-2025-09-27-spec-creation-and-project-rules-setup.md  02-2025-09-27-project-setup-and-initialization.md  03-2025-09-27-data-models-config-system-implementation.md  04-2025-09-27-document-processing-system-implementation.md  05-2025-09-27-ollama-model-implementation.md  06-2025-09-27-gemini-model-enhancement.md  07-2025-09-27-embedding-generator-implementation.md  08-2025-09-27-vector-database-implementation.md  09-2025-09-27-rag-engine-core-implementation.md  10-2025-09-27-learning-assistant-implementation.md  11-2025-09-27-dialog-manager-implementation.md  12-2025-09-27-session-tracker-implementation.md  13-2025-09-27-conversation-engine-integration.md  14-2025-09-27-conversation-engine-task-completion.md  15-2025-09-27-cli-framework-implementation.md  16-2025-09-27-cli-setup-commands-implementation.md  17-2025-09-27-interactive-chat-command-implementation.md  18-2025-09-27-cli-status-help-commands-implementation.md  19-2025-09-27-error-handling-logging-system-implementation.md  20-2025-09-27-unit-testing-and-deadlock-resolution.md  2025-09-27-trouble-shooting.md  21-2025-09-27-documentation-and-deployment-preparation.md  22-2025-09-30-git-tracking-fix-and-language-config-refactor.md
src/: __init__.py
src/document_rag_english_study/: __init__.py
src/document_rag_english_study/cli/: __init__.py  interface.py  main.py
src/document_rag_english_study/config/: __init__.py  manager.py  utils.py
src/document_rag_english_study/conversation/: __init__.py  dialog_manager.py  engine.py  learning_assistant.py  session_tracker.py
src/document_rag_english_study/core/: __init__.py
src/document_rag_english_study/document_manager/: __init__.py  manager.py  parser.py
src/document_rag_english_study/llm/: __init__.py  base.py  gemini_model.py  ollama_model.py  openai_model.py
src/document_rag_english_study/models/: __init__.py  config.py  conversation.py  document.py  llm.py  response.py
src/document_rag_english_study/rag/: __init__.py  embeddings.py  engine.py  vector_database.py
src/document_rag_english_study/utils/: __init__.py  error_handler.py  exceptions.py  logging_config.py
study_plan/: study.md  target.md  textbook.md
test_docs/: business-strategy.md  programming-guide.txt  sample.md  sample.txt  technology.md
tests/: test_cli_chat.py  test_cli_status_help.py  test_config_manager.py  test_config_utils.py  test_conversation_engine.py  test_dialog_manager.py  test_document_manager.py  test_document_parser.py  test_embedding_generator.py  test_error_handling.py  test_exceptions.py  test_gemini_model.py  test_learning_assistant.py  test_logging_config.py  test_models.py  test_ollama_model.py  test_openai_model.py  test_rag_engine.py  test_session_tracker.py  test_vector_database.py
